--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.theme_pink {
+  --sidebarBackground: #943356;
+  --sidebarFontColor: #943356;
+  --sidebarSelect: #5f2137;
+  --loginButton: #aa0b0b;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.theme_blue {
+  --sidebarBackground: #007bff;
+  --sidebarFontColor: #0248af;
+  --sidebarSelect: #0a5eb8;
+  --loginButton: #0655c7;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.appContainer {
+  background-color: #f5f8ff;
+  height: 100vh;
+}
+
+.routerContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 0 16px 0 76px;
+  width: calc(100vw - 76px);
+  overflow-x: hidden;
+}
+
+@media (max-width: 800px) {
+  .routerContainer {
+    margin: 0 5px !important;
+    width: calc(100vw - 10px) !important;
+  }
+}
+
+.dx-checkbox-icon {
+  border-color: #888 !important;
 }
