--- a/src/components/cardLogin/CardStyle.css
+++ b/src/components/cardLogin/CardStyle.css
@@ -1,10 +1,11 @@
 .cardContainer {
   width: 400px;
-  height: 500px;
-  padding: 15px 10px 15px 10px;
-  background-color: #ffffff;
+  height: 360px;
+  max-width: calc(100% - 12px);
+  padding: 25px 10px 15px 10px;
+  background-color: #f1ad41;
   border-radius: 15px;
-  box-shadow: 0px 0px 50px 10px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 50px 10px rgba(0, 0, 0, 0.1);
 }
 
 .cardPage {
