--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -16,7 +16,7 @@
   color: #ffffff;
   overflow: hidden;
   transition: 200ms ease;
-  background-color: red;
+  background-color: #f1ad41;
 }
 
 .sideBarScroll {
@@ -119,13 +119,13 @@
 }
 
 .sideBarLogo.logoOpen {
-  width: 100%;
-  /* background-image: url(../../assets/images/logo-light.png); */
+  width: 70%;
+  background-image: url(../../assets/images/logo-ignicao-digital.png);
 }
 .sideBarLogo.logoClose {
   border-radius: 50%;
   background-color: rgba(0, 0, 0, 0.3);
-  /* background-image: url(../../assets/images/logo-short.svg); */
+  background-image: url(../../assets/images/logo-short-ignicao-digital.png);
 }
 
 .sideBarSubMenuItem {
