--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -23,11 +23,14 @@ code {
   background: #555;
 }
 
-.end {
-  display: flex;
-  justify-content: flex-end;
-}
-
 .primary-color {
   color: #f1ad41;
+}
+
+.center {
+  text-align: center !important;
+}
+
+.margin-top {
+  margin-top: 16px;
 }
