--- a/src/components/cardRegister/CardStyle.css
+++ b/src/components/cardRegister/CardStyle.css
@@ -1,6 +1,6 @@
-.cardContainer {
+.cardContainerRegister {
   width: 400px;
-  height: 370px;
+  height: 450px;
   max-width: calc(100% - 12px);
   padding: 25px 10px 15px 10px;
   background-color: #f1ad41;
@@ -8,7 +8,7 @@
   box-shadow: 0px 0px 50px 10px rgba(0, 0, 0, 0.1);
 }
 
-.cardPage {
+.cardPageRegister {
   width: 100%;
   height: 100%;
   display: flex;
