--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,18 @@
     margin: 0 16px 0 78px;
   }
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
