--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -18,10 +18,10 @@
   flex-wrap: nowrap;
   align-items: flex-start;
   width: 300px !important;
-  margin: 20px 0px 40px 0px !important;
+  margin: 30px 0px 20px 0px !important;
 }
 
-.loginInputUser {
+.loginInput {
   border-radius: 8px !important;
 }
 
@@ -35,6 +35,7 @@
 }
 
 .loginButton {
+  margin-top: 10px;
   width: 200px;
   border-radius: 7px !important;
   font-size: 12pt !important;
@@ -68,4 +69,5 @@
 
 .loginText {
   font-weight: bold;
+  text-align: center;
 }
